--- a/config/api.conf
+++ b/config/api.conf
@@ -1,7 +1,9 @@
 # api 配置
 
+#server配置
+port=8080
+
 # redis 配置
-redis.ip="127.0.0.1"
-redis.port=6379
+redis.addr="localhost:6379"
 redis.blackIp=""
 redis.blackId=""
