--- a/config/api.conf
+++ b/config/api.conf
@@ -5,5 +5,7 @@ port=8080
 
 # redis 配置
 redis.addr="localhost:6379"
-redis.blackIp=""
-redis.blackId=""
+redis.blackIps=""
+redis.blackIds=""
+redis.secLimitField="secLimit"
+redis.minLimitField="minLimit"
